testsuite/tests/overloadedrecflds/should_run/OverloadedRecFldsRun08_C.hs
{-# LANGUAGE OverloadedRecordFields, TypeFamilies #-}

module OverloadedRecFldsRun08_C ( F(..) ) where

import OverloadedRecFldsRun08_A ( F(..) )

data instance F () = MkFUnit { foo :: () }
